--- a/style.css
+++ b/style.css
@@ -76,11 +76,19 @@ h2 {
   bottom: 0; 
   width: 100%; 
   text-align: center; 
-  padding: 10px; 
+  padding: 8px; 
   background-color: #f8f9fa; 
-  font-size: 14px; 
+  font-size: 13px; 
   color: #6c757d;
   border-top: 1px solid #ddd;
+}
+
+#footer a {
+  text-decoration: none;
+}
+
+#footer a:visited{
+  color: #6c757d;
 }
 
 input {
